small adjustments to the image radius, added a bg image, fixed spacing on slider and main-view which contains the newest post and popular posts

--- a/css/devPage.css
+++ b/css/devPage.css
@@ -13,7 +13,7 @@ header {
 .socials {
     display: flex;
     justify-content: flex-end;
-    margin-top: 3%;
+    padding: 3%;
     padding-right: 5%;
     gap: 1%;
 }
@@ -27,7 +27,9 @@ i:hover {
     color: #FFC306;
 }
 
+
 nav {
+  
     padding: 3vh 4vw;
     display: flex;
     justify-content: space-between;
@@ -104,6 +106,14 @@ a {
     border: none;
 }
 
+.ribbon {
+    height: 100%;
+    width: auto;
+    background-image: url('/images/DesktopRibbon.png');
+    background-repeat: no-repeat;
+    
+}
+
 .intro {
     padding: 0 8%;
     max-width: 80%;
@@ -122,6 +132,7 @@ main {
 .main-view {
     min-width: 375px;
     display: flex;
+    justify-content: space-around;
     align-items: center;
     gap: 3%;
     padding: 0 5%;
@@ -143,16 +154,20 @@ div.newestPost {
     max-width: 600px;
     height: auto;
     cursor: pointer;
-    border-radius: 0.4vw;
+    border: none;
+    border-radius: 1vw;
 }
 
 .newestPost img {
     text-align: left;
     width: 100%;
-    max-width: 600px;
+    max-width: 1000px;
     height: auto;
-
+    border-radius: 1vw;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
 }
+
+
 
 .text-container {
     display: flex;
@@ -165,6 +180,7 @@ div.newestPost {
     color: aliceblue;
     position: absolute;
     text-wrap: wrap;
+    border-radius: 1vw;
 }
 
 .text-container h2 {
@@ -227,7 +243,8 @@ section {
 }
 
 div.bottom-scroll {
-    padding: 2% 10%;
+    padding: 2% 0;
+    gap: 3%;
     display: flex;
     overflow-y: hidden;
     overflow-x: auto;
@@ -256,6 +273,10 @@ div.cardPost {
 .bottom-scroll h6 {
     font-weight: 400;
 }
+footer {
+    display: flex;
+    align-items: flex-start;
+}
 
 @media screen and (max-width: 840px){
 
@@ -282,7 +303,8 @@ button.navLink {
 
     }
     .intro h2 {
-        font-size: large;
+        font-size: x-large;
+        font-weight: 600;
         margin-bottom: 7px;
 
     }
